--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music</title>
+  <title>PlayMusic</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -22,10 +22,8 @@
       <div class="controles">
         <button id="voltar"><img src="./assets/voltar.png" alt="voltar"></button>
         <button id="play"><img src="./assets/play.png" alt="play"></button>
-        <button id="pause" class="hide"><svg xmlns="http://www.w3.org/2000/svg" style="width: 17px; " viewBox="0 0 320 512">
-            <path d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z" fill="#E1E1E6"></path>
-          </svg></button>
-        <button id="avançar"><img src="./assets/avancar.png" alt="avancar"></button>
+        <button id="pause" class="hide"><img src="./assets/pause.png" alt="pause"></button>
+        <button id="avancar"><img src="./assets/avancar.png" alt="avancar"></button>
       </div>
       <div class="container-progresso">
         <input id="progressBar" type="range" value="0" min="0" max="100" step="1">
